[http] tidy up NotifyHttpClient